syntax = "proto3";

package henkenclub.content;

service Book { rpc GetBook(GetBookRequest) returns (GetBookResponse); }

message BookEntity {
  string id = 1;
  string name = 2;

  optional string isbn = 3;
}

message GetBookRequest { string id = 1; }

message GetBookResponse { BookEntity book = 2; }
